--- a/manifest.plist
+++ b/manifest.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://192.168.80.11:28100/APPAGENT/File/Download?pathname=ftpdir/ftpdir/App/&amp;filename=AMI.ipa</string>
+					<string>https://github.com/DonyFang/Demos.git</string>
 				</dict>
 				<dict>
 					<key>kind</key>
